crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__simple_binop_plus.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc + def
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpPlus=>OpPlus@1
            Ident=>LowerIdent@2
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("abc"), Plus, Ident("def"))

[=== formatted below ===]

