crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__simple_nested_assign_decl.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "abc =\n    def = ghi\n    jkl\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (BeginBlock
            (BeginAssign
                Ident=>LowerIdent@2
                InlineAssign=>OpAssign@3
                Ident=>LowerIdent@4
            EndAssign)
            HintExpr
            Ident=>LowerIdent@5
        EndBlock)
    EndAssign)
EndTopLevelDecls)

[=== canfmt below ===]
Assign("abc", Block([Assign("def", Ident("ghi")), Ident("jkl")]))

[=== formatted below ===]

