crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__single_arg_closure_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\a -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Ident=>LowerIdent@1
            InlineLambdaArrow=>OpArrow@2
            Num=>Int@3
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Ident("a")], IntBase10("42"))

[=== formatted below ===]

