crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__single_underscore_closure_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\_ -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Underscore=>Underscore@1
            InlineLambdaArrow=>OpArrow@2
            Num=>IntBase10@3
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Underscore("_")], IntBase10("42"))

[=== formatted below ===]

