crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__snapshot_apply.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc def
---
(BeginTopLevelDecls
    (* HintExpr Ident=>LowerIdent@0 Ident=>LowerIdent@1 EndApply)
EndTopLevelDecls)
