crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__snapshot_ident.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
