crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__space_only_after_minus_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x- y\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Ident=>LowerIdent@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("x"), Minus, Ident("y"))

[=== formatted below ===]

