crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__spaced_singleton_list_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[ 1 ]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList Num=>Int@1 EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]

