crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__spaced_singleton_list_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[1]\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginList Num=>IntBase10@1 EndList)
EndTopLevelDecls)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]

